<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView1"
        style="@style/Textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        style="@style/RedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_outline_black_24dp"
        android:gravity="center|start"
        android:onClick="click_btn"
        android:text="@string/ads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/button2"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sms_black_24dp"
        android:onClick="click_btn"
        android:text="@string/report_problem"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_services"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_build_black_24dp"
        android:onClick="click_btn"
        android:text="@string/guaranteed_repair"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button4"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sms_black_24dp"
        android:onClick="click_btn"
        android:text="@string/dispatcher_application"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button5"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sms_black_24dp"
        android:onClick="click_btn"
        android:text="@string/call_plumbing"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button6"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sms_black_24dp"
        android:onClick="click_btn"
        android:text="@string/call_electrician"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accounting"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button7"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_btn"
        android:text="@string/pokazania"
        android:drawableStart="@drawable/ic_dvr_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_services"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button8"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_btn"
        android:text="@string/paid_plumbing_services"
        android:drawableStart="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button9"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_btn"
        android:text="@string/paid_electrician_services"
        android:drawableStart="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button10"
        style="@style/RedButton"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click_btn"
        android:text="@string/paid_electrician_services"
        android:drawableStart="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</android.support.constraint.ConstraintLayout>